--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -1,7 +1,10 @@
 .settings {
   background-color: rgba(255, 255, 255, 0.05);
-  width: 300px;
+  width: 270px;
   border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
 }
 
 .gender {
