feat(config): added configuration option

--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -57,6 +57,11 @@
   cursor: pointer;
 }
 
+.disabled {
+  opacity: 0.3;
+  pointer-events: none;
+}
+
 .colorModal {
   position: absolute;
   z-index: 9;
