--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@ body {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  background-image: radial-gradient(#616161, #000000);
+  background-image: radial-gradient(#2b2b2b, #000000);
 }
 
 .container {
