--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -1,10 +1,12 @@
 .settings {
-  background-color: #313131;
+  background-color: #ffffff0f;
   width: 270px;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
+  margin: 20px;
+  margin-right: 0;
 }
 
 .gender {
@@ -59,7 +61,7 @@
   font-size: 14px;
   padding: 10px 0;
   margin: 0 20px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.07);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
   cursor: pointer;
 }
 
