--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -5,8 +5,28 @@
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  margin: 20px;
-  margin-right: 0;
+  margin: 20px 0 20px 20px;
+}
+
+.settingContent {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.footer {
+  color: #a2a2a2;
+  font-size: 14px;
+  padding: 20px;
+  text-align: center;
+  border-top: 1px solid #2d2d2d;
+  line-height: 21px;
+
+  a {
+    color: deepskyblue;
+    margin-left: 5px;
+    text-decoration: none;
+  }
 }
 
 .gender {
@@ -31,7 +51,11 @@
   align-items: center;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.15);
+  }
+
+  &[aria-selected="true"] {
+    border-color: #2196f3;
   }
 }
 
@@ -85,4 +109,24 @@
 
 .colorWrapper {
   position: relative;
+}
+
+.download {
+  @extend .iconButton;
+  margin: 15px 10px 10px;
+  padding: 6px 15px;
+  text-align: center;
+  outline: none;
+  width: 100px;
+  justify-content: center;
+  align-self: center;
+}
+
+.name {
+  background-image: url(/logo.png);
+  height: 65px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 10px 30px 0px;
+  background-position: center;
 }
