--- a/src/components/Settings/Settings.module.scss
+++ b/src/components/Settings/Settings.module.scss
@@ -64,7 +64,7 @@
   border-radius: 2px;
   margin: 0 10px;
   cursor: pointer;
-  transition: all 200ms;
+  transition: background-color 200ms;
   border: 1px solid transparent;
   font-size: 14px;
   align-items: center;
