:sparkles:  Demo for React India

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,8 @@ body {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  background-image: radial-gradient(#2b2b2b, #000000);
+  //background-image: radial-gradient(#2b2b2b, #000000);
+  //background-color: #000000;
 }
 
 .container {
